--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,7 @@ workflows:
   build:
     jobs:
       - cypress/run:
-      yarn: true
-      store_artifact: true
+          store_artifacts: true
 
 
 
