--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,12 @@ workflows:
   build:
     jobs:
       - cypress/run:
-             start: npm start        # start server      
-          #store_artifacts: true
-         # record: true
+             yarn : true    
+             store_artifacts: true
+           # record: true
+
+        #  executor: cypress/base-14
+        #  start: npm start        # start server  
 
 # store test reports -->>
         #  post-steps:
@@ -17,29 +20,6 @@ workflows:
 
 
 
-# # Use the latest 2.1 version of CircleCI pipeline process engine.
-# # See: https://circleci.com/docs/2.0/configuration-reference
-# version: 2.1
 
-# # Define a job to be invoked later in a workflow.
-# # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-# jobs:
-#   say-hello:
-#     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-#     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-#     docker:
-#       - image: cimg/base:stable
-#     # Add steps to the job
-#     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-#     steps:
-#       - checkout
-#       - run:
-#           name: "Say hello"
-#           command: "echo Hello, World!"
 
-# # Invoke jobs via workflows
-# # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-# workflows:
-#   say-hello-workflow:
-#     jobs:
-#       - say-hello
+
